<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterActivity"
    android:background="@drawable/background"
    android:id="@+id/register">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="#212121"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="50sp"
        app:cardBackgroundColor="#212121"
        app:cardElevation="12dp"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textAlignment="center"
                android:textSize="30sp"
                android:paddingTop="20sp"
                android:paddingBottom="10sp"
                android:typeface="monospace"
                android:textStyle="bold"
                android:textColor="#FF5252"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_register"
                android:padding="10sp"
                app:boxCornerRadiusBottomStart="30sp"
                app:boxCornerRadiusBottomEnd="30sp"
                app:boxCornerRadiusTopStart="30sp"
                app:boxCornerRadiusTopEnd="30sp"
                app:boxStrokeColor="#FF5252"
                android:textColorHint="#BFFFFFFF"
                app:hintTextColor="#FF5252"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <EditText
                    android:id="@+id/txt_email"
                    android:hint="@string/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:typeface="monospace"
                    android:autofillHints="email"
                    android:inputType="textEmailAddress"
                    android:textColor="#FFFFFF"
                    android:backgroundTint="#3DFFFFFF"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_email"
                android:padding="10sp"
                android:hint="@string/password"
                app:boxCornerRadiusBottomStart="30sp"
                app:boxCornerRadiusBottomEnd="30sp"
                app:boxCornerRadiusTopStart="30sp"
                app:boxCornerRadiusTopEnd="30sp"
                app:boxStrokeColor="#3293FF"
                android:textColorHint="#BFFFFFFF"
                app:hintTextColor="#3293FF"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <EditText
                    android:id="@+id/txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:typeface="monospace"
                    android:autofillHints="password"
                    android:inputType="textPassword"
                    android:textColor="#FFFFFF"
                    android:backgroundTint="#3DFFFFFF"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_password"
                android:padding="10sp"
                android:hint="@string/name"
                app:boxCornerRadiusBottomStart="30sp"
                app:boxCornerRadiusBottomEnd="30sp"
                app:boxCornerRadiusTopStart="30sp"
                app:boxCornerRadiusTopEnd="30sp"
                app:boxStrokeColor="#4CAF50"
                android:textColorHint="#BFFFFFFF"
                app:hintTextColor="#4CAF50"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <EditText
                    android:id="@+id/txt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:typeface="monospace"
                    android:autofillHints="name"
                    android:inputType="text"
                    android:textColor="#FFFFFF"
                    android:backgroundTint="#3DFFFFFF"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_name"
                android:padding="5sp"
                android:hint="@string/gender"
                android:textColorHint="#BFFFFFFF"
                app:hintTextColor="#BFFFFFFF">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:typeface="monospace"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center"/>
                <RadioGroup
                    android:id="@+id/radio_group_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <RadioButton
                        android:id="@+id/radio_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textColor="#FF9800"
                        android:buttonTint="#FF9800"/>

                    <RadioButton
                        android:id="@+id/radio_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:textColor="#7E57C2"
                        android:buttonTint="#7E57C2"/>
                </RadioGroup>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_gender"
                android:padding="10sp"
                android:hint="@string/birthdate"
                app:boxCornerRadiusBottomStart="30sp"
                app:boxCornerRadiusBottomEnd="30sp"
                app:boxCornerRadiusTopStart="30sp"
                app:boxCornerRadiusTopEnd="30sp"
                app:boxStrokeColor="#FF9800"
                android:textColorHint="#BFFFFFFF"
                app:hintTextColor="#FF9800"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/txt_birthdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:typeface="monospace"
                    android:autofillHints="address"
                    android:textColor="#FFFFFF"
                    android:backgroundTint="#3DFFFFFF"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_birthdate"
                android:padding="10sp"
                android:hint="@string/address"
                app:boxCornerRadiusBottomStart="30sp"
                app:boxCornerRadiusBottomEnd="30sp"
                app:boxCornerRadiusTopStart="30sp"
                app:boxCornerRadiusTopEnd="30sp"
                app:boxStrokeColor="#7E57C2"
                android:textColorHint="#BFFFFFFF"
                app:hintTextColor="#7E57C2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <EditText
                    android:id="@+id/txt_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:typeface="monospace"
                    android:autofillHints="address"
                    android:textColor="#FFFFFF"
                    android:backgroundTint="#3DFFFFFF"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_address"
                android:orientation="vertical"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:textColor="#FFFFFF"
                    android:backgroundTint="#FF5252"
                    android:layout_marginTop="20sp"
                    android:layout_marginBottom="30sp"
                    android:typeface="monospace" />

            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>